# MiniVis

./: CMakeLists.txt  README.md  main.cpp  main.qml  main.qrc  vulkantextureitem.cpp  vulkantextureitem.h
ecs/: Registry.h  SparseSet.h  TypeIDGenerator.h  componenttable.h  componentviewc.h
importer/: stlimporter.cpp  stlimporter.h
models/: info.txt
qml/: main.qml
qml/components/: DoubleSpinBox.qml
qml/views/: SceneView.qml
renderer/: VulkanRenderer.h  vulkanrenderer.cpp  vulkanrendererc.h
renderer/framegraph/: FrameGraph.h  framegraph.h  framegraphbuilder.h  rendervalues.h
renderer/types/: ShaderDescription.h  rendercycle.h  rendererfactory.h
renderer/types/simpleforward/: simpleforwardrenderer.h
renderer/wrapper/: pipeline.h
scene/: DoubleSpinBox.qml  MatrixView.qml  SceneView.qml  Vector3InputForm.qml  camera.h  matrixmodel.h  scenecomponents.h  scenegraph.h  scenetreemodel.cpp  scenetreemodel.h  sceneview.qml
util/: stringviewhash.h
